# fire-safety-pz-pipeline

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION_TO_CLAUDE_CODE.md  README.md  SECURITY.md  SKILL.md  pyproject.toml  run_gui.py  эталон МПБ Ф5.1.md  эталон МПБ котельная том9.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
agents/: assembly.md  audit.md  intelligence.md  orchestrator.md
docs/: architecture.md  codex-native-workflow.md  etalon-generic-pp87-structure.md  etalon-mpb-f5-1-structure.md  getting-started.md  phase-0-integrity.md  phase-1-corpus.md  phase-2-engineering.md  phase-3-text-quality.md  phase-4-audit-loop.md  phase-5-export.md
norms/: SP_1.13130.md  SP_10.13130.md  SP_12.13130.md  SP_2.13130.md  SP_3.13130.md  SP_4.13130.md  SP_484.131150.md  SP_486.1311500.md  SP_56.13330_2021.md  SP_6.13130.md  SP_7.13130.md  SP_8.13130.md  SP_89.13330_2016.md  SP_90.13333.2012_powerplants.md  techreglament.md  СП 3_13130_2009_ С.docx.md  сп 485.docx.md
projects/demo/: state.json
projects/hvo/: conversation_state.json  state.json
schemas/: agent_findings.schema.json  conversation_state.schema.json  matrix.schema.json  norm.schema.json  passport.schema.json  state.schema.json
src/mpb_pz_flow/: __init__.py  assembler.py  calculators.py  cli.py  codex_native.py  consolidate.py  corpus.py  demo.py  docx_export.py  front_matter.py  gui_server.py  (+9 more)
tests/: test_pipeline.py
web/: app.js  index.html  styles.css
workflows/: tom9.workflow.js
(+23 files in other folders)
