[project]
name = "mpb-pz-flow"
version = "0.1.0"
description = "Codex-native workflow for fire-safety explanatory note sections."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
docx = ["python-docx>=1.1.0"]

[project.scripts]
mpb-pz = "mpb_pz_flow.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

